修改A星 增加打包工具 修改预制体

--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Assets\Editor\ILRuntime\ILRuntimeCLRBinding.cs" />
     <Compile Include="Assets\Editor\ILRuntime\MonoBehaviourAdapterEditor.cs" />
     <Compile Include="Assets\Editor\BuildHotfix.cs" />
+    <Compile Include="Assets\Editor\Preprocess.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
