--- a/Unity.Model.csproj
+++ b/Unity.Model.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Tool\OpenFileName.cs" />
+    <Compile Include="Assets\Scripts\System\Data\AStarNodeData.cs" />
     <Compile Include="Assets\Scripts\System\GlobalGenerator.cs" />
     <Compile Include="Assets\Scripts\System\Data\Enum\UI\PanelType.cs" />
     <Compile Include="Assets\Scripts\System\Pool\Pool.cs" />
@@ -98,6 +99,7 @@
     <Compile Include="Assets\Scripts\LitJson\JsonMapper.cs" />
     <Compile Include="Assets\Scripts\System\IO.cs" />
     <Compile Include="Assets\Scripts\System\Data\Const\SceneName.cs" />
+    <Compile Include="Assets\Scripts\Manager\AStarManager.cs" />
     <Compile Include="Assets\Scripts\LitJson\Lexer.cs" />
     <Compile Include="Assets\Scripts\Manager\AssetManager.cs" />
     <Compile Include="Assets\Scripts\System\Data\AssetData.cs" />
