--- a/Unity.Model.csproj
+++ b/Unity.Model.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Assets\Scripts\Manager\AssetManager.cs" />
     <Compile Include="Assets\Scripts\System\Data\AssetData.cs" />
     <Compile Include="Assets\Scripts\LitJson\JsonWriter.cs" />
+    <Compile Include="Assets\Scripts\UI\Panel\Launch\LaunchPanel.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Scripts\Unity.Model.asmdef" />
