--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Assets\Hotfix\Manager\TimerManager.cs" />
     <Compile Include="Assets\Hotfix\Data\System\DataList.cs" />
     <Compile Include="Assets\Hotfix\System\Data\Enum\CommandVarietyType.cs" />
+    <Compile Include="Assets\Hotfix\Game\Camera\SmoothFoolow3D.cs" />
     <Compile Include="Assets\Hotfix\Hotfix.cs" />
     <Compile Include="Assets\Hotfix\System\Data\Enum\UI\LogType.cs" />
     <Compile Include="Assets\Hotfix\System\Data\Enum\GameEventType.cs" />
@@ -77,6 +78,7 @@
     <Compile Include="Assets\Hotfix\Manager\GameDataManager.cs" />
     <Compile Include="Assets\Hotfix\System\Util\JsonUtil.cs" />
     <Compile Include="Assets\Hotfix\Socket\CenterHandler.cs" />
+    <Compile Include="Assets\Hotfix\Tool\Joystack\Joystack.cs" />
     <Compile Include="Assets\Hotfix\System\Util\Util.cs" />
     <Compile Include="Assets\Hotfix\System\Data\Enum\PathType.cs" />
     <Compile Include="Assets\Hotfix\Manager\Manager.cs" />
@@ -102,8 +104,7 @@
     <Compile Include="Assets\Hotfix\System\Data\TimerData.cs" />
     <Compile Include="Assets\Hotfix\System\IO.cs" />
     <Compile Include="Assets\Hotfix\System\Data\CommandData.cs" />
-    <Compile Include="Assets\Hotfix\Game\Camera\SmoothFoolow.cs" />
-    <Compile Include="Assets\Hotfix\Tool\Joystack\Joystack.cs" />
+    <Compile Include="Assets\Hotfix\Game\Camera\SmoothFoolow2D.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Hotfix\Unity.Hotfix.asmdef" />
