主工程热更程不继承mono 完善Lcc视图工厂等

--- a/Assets/Hotfix/Unity.Hotfix.asmdef
+++ b/Assets/Hotfix/Unity.Hotfix.asmdef
@@ -1,7 +1,8 @@
 {
     "name": "Unity.Hotfix",
     "references": [
-        "GUID:0d1ae7fff56963548a2a2a16dab3c5c6"
+        "GUID:0d1ae7fff56963548a2a2a16dab3c5c6",
+        "GUID:7a1fa966b0ea23f40a6a4dc4dab1e297"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
