--- a/Unity.Model.csproj
+++ b/Unity.Model.csproj
@@ -22,7 +22,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>Temp\Bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;UNITY_2020_1_1;UNITY_2020_1;UNITY_2020;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_5_OR_NEWER;UNITY_5_6_OR_NEWER;UNITY_2017_1_OR_NEWER;UNITY_2017_2_OR_NEWER;UNITY_2017_3_OR_NEWER;UNITY_2017_4_OR_NEWER;UNITY_2018_1_OR_NEWER;UNITY_2018_2_OR_NEWER;UNITY_2018_3_OR_NEWER;UNITY_2018_4_OR_NEWER;UNITY_2019_1_OR_NEWER;UNITY_2019_2_OR_NEWER;UNITY_2019_3_OR_NEWER;UNITY_2019_4_OR_NEWER;UNITY_2020_1_OR_NEWER;PLATFORM_ARCH_64;UNITY_64;UNITY_INCLUDE_TESTS;ENABLE_AR;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_EVENT_QUEUE;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_TEXTURE_STREAMING;ENABLE_VIRTUALTEXTURING;ENABLE_UNET;ENABLE_LZMA;ENABLE_UNITYEVENTS;ENABLE_VR;ENABLE_WEBCAM;ENABLE_UNITYWEBREQUEST;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_COLLAB_SOFTLOCKS;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_SERVICES_USE_WEBREQUEST;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_HUB_LICENSE;ENABLE_WEBSOCKET_CLIENT;ENABLE_DIRECTOR_AUDIO;ENABLE_DIRECTOR_TEXTURE;ENABLE_MANAGED_JOBS;ENABLE_MANAGED_TRANSFORM_JOBS;ENABLE_MANAGED_ANIMATION_JOBS;ENABLE_MANAGED_AUDIO_JOBS;INCLUDE_DYNAMIC_GI;ENABLE_MONO_BDWGC;ENABLE_SCRIPTING_GC_WBARRIERS;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;ENABLE_VIDEO;PLATFORM_STANDALONE;PLATFORM_STANDALONE_WIN;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_OUT_OF_PROCESS_CRASH_HANDLER;ENABLE_CLUSTER_SYNC;ENABLE_CLUSTERINPUT;GFXDEVICE_WAITFOREVENT_MESSAGEPUMP;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;NET_4_6;ENABLE_PROFILER;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;ENABLE_UNITY_COLLECTIONS_CHECKS;ENABLE_BURST_AOT;UNITY_TEAM_LICENSE;ENABLE_CUSTOM_RENDER_TEXTURE;ENABLE_DIRECTOR;ENABLE_LOCALIZATION;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_TILEMAP;ENABLE_TIMELINE;ENABLE_LEGACY_INPUT_MANAGER;ILRuntime;CSHARP_7_OR_LATER;CSHARP_7_3_OR_NEWER</DefineConstants>
+    <DefineConstants>DEBUG;TRACE;UNITY_2020_1_1;UNITY_2020_1;UNITY_2020;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_5_OR_NEWER;UNITY_5_6_OR_NEWER;UNITY_2017_1_OR_NEWER;UNITY_2017_2_OR_NEWER;UNITY_2017_3_OR_NEWER;UNITY_2017_4_OR_NEWER;UNITY_2018_1_OR_NEWER;UNITY_2018_2_OR_NEWER;UNITY_2018_3_OR_NEWER;UNITY_2018_4_OR_NEWER;UNITY_2019_1_OR_NEWER;UNITY_2019_2_OR_NEWER;UNITY_2019_3_OR_NEWER;UNITY_2019_4_OR_NEWER;UNITY_2020_1_OR_NEWER;PLATFORM_ARCH_64;UNITY_64;UNITY_INCLUDE_TESTS;ENABLE_AR;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_EVENT_QUEUE;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_TEXTURE_STREAMING;ENABLE_VIRTUALTEXTURING;ENABLE_UNET;ENABLE_LZMA;ENABLE_UNITYEVENTS;ENABLE_VR;ENABLE_WEBCAM;ENABLE_UNITYWEBREQUEST;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_COLLAB_SOFTLOCKS;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_SERVICES_USE_WEBREQUEST;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_HUB_LICENSE;ENABLE_WEBSOCKET_CLIENT;ENABLE_DIRECTOR_AUDIO;ENABLE_DIRECTOR_TEXTURE;ENABLE_MANAGED_JOBS;ENABLE_MANAGED_TRANSFORM_JOBS;ENABLE_MANAGED_ANIMATION_JOBS;ENABLE_MANAGED_AUDIO_JOBS;INCLUDE_DYNAMIC_GI;ENABLE_MONO_BDWGC;ENABLE_SCRIPTING_GC_WBARRIERS;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;ENABLE_VIDEO;PLATFORM_STANDALONE;PLATFORM_STANDALONE_WIN;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_OUT_OF_PROCESS_CRASH_HANDLER;ENABLE_CLUSTER_SYNC;ENABLE_CLUSTERINPUT;GFXDEVICE_WAITFOREVENT_MESSAGEPUMP;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;NET_4_6;ENABLE_PROFILER;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;ENABLE_UNITY_COLLECTIONS_CHECKS;ENABLE_BURST_AOT;UNITY_TEAM_LICENSE;ENABLE_CUSTOM_RENDER_TEXTURE;ENABLE_DIRECTOR;ENABLE_LOCALIZATION;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_TILEMAP;ENABLE_TIMELINE;ENABLE_LEGACY_INPUT_MANAGER;CSHARP_7_OR_LATER;CSHARP_7_3_OR_NEWER</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <NoWarn>0169</NoWarn>
@@ -59,18 +59,17 @@
     <Compile Include="Assets\Scripts\Runtime\Core\View\Base\IView.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Data\AStarNodeData.cs" />
     <Compile Include="Assets\Scripts\Runtime\Init\Init.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\Data\Enum\UI\PanelType.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Data\Config\Enum\UI\PanelType.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Pool\Pool.cs" />
     <Compile Include="Assets\Scripts\Runtime\Manager\LoadSceneManager.cs" />
     <Compile Include="Assets\Scripts\Runtime\Manager\ILRuntimeManager.cs" />
     <Compile Include="Assets\Scripts\Tool\DelayDestroy.cs" />
     <Compile Include="Assets\Scripts\Tool\LongClickButton.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\UI\Panel\PanelInfo.cs" />
-    <Compile Include="Assets\Scripts\Runtime\ILRuntime\Adapter\CoroutineAdapter.cs" />
     <Compile Include="Assets\Scripts\Runtime\Manager\MonoManager.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\UI\Tips\Tips.cs" />
     <Compile Include="Assets\Scripts\Tool\Drag.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\Data\Enum\PathType.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Data\Config\Enum\PathType.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Pool\TipsPool.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Object\Singleton.cs" />
     <Compile Include="Assets\Scripts\Runtime\Manager\Manager.cs" />
@@ -78,7 +77,7 @@
     <Compile Include="Assets\Scripts\Runtime\Core\UI\Log\LogInfo.cs" />
     <Compile Include="Assets\Scripts\LitJson\JsonData.cs" />
     <Compile Include="Assets\Scripts\LitJson\JsonMockWrapper.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\Data\Enum\UI\InfoState.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Data\Config\Enum\UI\InfoState.cs" />
     <Compile Include="Assets\Scripts\Tool\Delay.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\UI\Base\Info.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\UI\TipsWindow\TipsWindow.cs" />
@@ -87,13 +86,13 @@
     <Compile Include="Assets\Scripts\Tool\EnterClickButton.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\DataBinder\Binding.cs" />
     <Compile Include="Assets\Scripts\Runtime\Manager\LogManager.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\Data\Enum\UI\LogType.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Data\Config\Enum\UI\LogType.cs" />
     <Compile Include="Assets\Scripts\LitJson\ParserToken.cs" />
     <Compile Include="Assets\Scripts\Runtime\Manager\ContainerManager.cs" />
     <Compile Include="Assets\Scripts\Runtime\Manager\TipsWindowManager.cs" />
     <Compile Include="Assets\Scripts\Tool\RightClickButton.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\View\Base\ViewBase.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\Data\Const\AssetType.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Data\Config\AssetType.cs" />
     <Compile Include="Assets\Scripts\Tool\DisplayMode.cs" />
     <Compile Include="Assets\Scripts\LitJson\IJsonWrapper.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Pool\TipsWindowPool.cs" />
@@ -106,7 +105,7 @@
     <Compile Include="Assets\Scripts\LitJson\JsonMapper.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Object\Objects.cs" />
     <Compile Include="Assets\Scripts\Tool\LocalDialog.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\Data\Const\SceneName.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Data\Config\SceneName.cs" />
     <Compile Include="Assets\Scripts\Runtime\Manager\AStarManager.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\DataBinder\DataBinder.cs" />
     <Compile Include="Assets\Scripts\LitJson\Lexer.cs" />
