--- a/Unity.Model.csproj
+++ b/Unity.Model.csproj
@@ -56,7 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Tool\OpenFileName.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\View\Base\IView.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\View\IView.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Data\AStarNodeData.cs" />
     <Compile Include="Assets\Scripts\Runtime\Init\Init.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Data\Config\Enum\UI\PanelType.cs" />
@@ -65,22 +65,22 @@
     <Compile Include="Assets\Scripts\Runtime\Manager\ILRuntimeManager.cs" />
     <Compile Include="Assets\Scripts\Tool\DelayDestroy.cs" />
     <Compile Include="Assets\Scripts\Tool\LongClickButton.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\UI\Panel\PanelInfo.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Data\UI\PanelInfo.cs" />
     <Compile Include="Assets\Scripts\Runtime\Manager\MonoManager.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\UI\Tips\Tips.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Data\UI\Tips.cs" />
     <Compile Include="Assets\Scripts\Tool\Drag.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Data\Config\Enum\PathType.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Pool\TipsPool.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Object\Singleton.cs" />
     <Compile Include="Assets\Scripts\Runtime\Manager\Manager.cs" />
     <Compile Include="Assets\Scripts\Runtime\Manager\TipsManager.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\UI\Log\LogInfo.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Data\UI\LogInfo.cs" />
     <Compile Include="Assets\Scripts\LitJson\JsonData.cs" />
     <Compile Include="Assets\Scripts\LitJson\JsonMockWrapper.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Data\Config\Enum\UI\InfoState.cs" />
     <Compile Include="Assets\Scripts\Tool\Delay.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\UI\Base\Info.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\UI\TipsWindow\TipsWindow.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Data\UI\InfoBase.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Data\UI\TipsWindow.cs" />
     <Compile Include="Assets\Scripts\LitJson\JsonReader.cs" />
     <Compile Include="Assets\Scripts\LitJson\JsonException.cs" />
     <Compile Include="Assets\Scripts\Tool\EnterClickButton.cs" />
@@ -91,7 +91,7 @@
     <Compile Include="Assets\Scripts\Runtime\Manager\ContainerManager.cs" />
     <Compile Include="Assets\Scripts\Runtime\Manager\TipsWindowManager.cs" />
     <Compile Include="Assets\Scripts\Tool\RightClickButton.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\View\Base\ViewBase.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\View\ViewBase.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Data\Config\AssetType.cs" />
     <Compile Include="Assets\Scripts\Tool\DisplayMode.cs" />
     <Compile Include="Assets\Scripts\LitJson\IJsonWrapper.cs" />
@@ -99,7 +99,7 @@
     <Compile Include="Assets\Scripts\Runtime\Util\GameUtil.cs" />
     <Compile Include="Assets\Scripts\Tool\DoubleClickButton.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Object\LccViewFactory.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\ViewModel\Base\ViewModelBase.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\ViewModel\ViewModelBase.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Object\LccView.cs" />
     <Compile Include="Assets\Scripts\Runtime\Manager\PanelManager.cs" />
     <Compile Include="Assets\Scripts\LitJson\JsonMapper.cs" />
@@ -114,6 +114,9 @@
     <Compile Include="Assets\Scripts\Runtime\Core\Data\AssetData.cs" />
     <Compile Include="Assets\Scripts\LitJson\JsonWriter.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Object\ObjectBase.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Event\EventHandlerAttribute.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Event\IEvent.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Manager\EventManager.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Scripts\Unity.Model.asmdef" />
