--- a/Unity.Model.csproj
+++ b/Unity.Model.csproj
@@ -70,7 +70,7 @@
     <Compile Include="Assets\Scripts\Tool\LongClickButton.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Data\UI\PanelInfo.cs" />
     <Compile Include="Assets\Scripts\Runtime\Manager\MonoManager.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\Data\UI\Tips.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Object\Tips.cs" />
     <Compile Include="Assets\Scripts\Tool\Drag.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Data\Config\Enum\PathType.cs" />
     <Compile Include="Assets\Scripts\Runtime\Manager\EventManager.cs" />
@@ -79,21 +79,19 @@
     <Compile Include="Assets\Scripts\Runtime\Manager\Manager.cs" />
     <Compile Include="Assets\Scripts\Runtime\Manager\TipsManager.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Socket\CenterHandler.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\Data\UI\LogInfo.cs" />
     <Compile Include="Assets\Scripts\LitJson\JsonData.cs" />
     <Compile Include="Assets\Scripts\LitJson\JsonMockWrapper.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Data\Config\Enum\UI\InfoState.cs" />
     <Compile Include="Assets\Scripts\Tool\Delay.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Data\UI\InfoBase.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\Data\UI\TipsWindow.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Object\TipsWindow.cs" />
     <Compile Include="Assets\Scripts\LitJson\JsonReader.cs" />
+    <Compile Include="Assets\Scripts\Logic\UI\Panel\Launch\ViewModel\LaunchModel.cs" />
     <Compile Include="Assets\Scripts\LitJson\JsonException.cs" />
     <Compile Include="Assets\Scripts\Tool\EnterClickButton.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\DataBinder\Binding.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Manager\LogManager.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Data\Config\Enum\UI\LogType.cs" />
     <Compile Include="Assets\Scripts\LitJson\ParserToken.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Manager\ContainerManager.cs" />
     <Compile Include="Assets\Scripts\Runtime\Manager\TipsWindowManager.cs" />
     <Compile Include="Assets\Scripts\Tool\RightClickButton.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\View\ViewBase.cs" />
@@ -122,7 +120,8 @@
     <Compile Include="Assets\Scripts\Runtime\Core\Data\AssetData.cs" />
     <Compile Include="Assets\Scripts\LitJson\JsonWriter.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Object\ObjectBase.cs" />
-    <Compile Include="Assets\Scripts\Logic\UI\Panel\Launch\ViewModel\LaunchModel.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Handler\ObjectBaseHandler.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Handler\PanelObjectBaseHandler.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Scripts\Unity.Model.asmdef" />
