--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -61,6 +61,8 @@
     <Compile Include="Assets\Hotfix\Runtime\Core\Data\Config\Enum\CommandType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\LanguageManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Handler\PanelObjectBaseHandler.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Manager\UIEventManager.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Data\UIEventType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Event\IEvent.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\PanelManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Data\Config\Enum\LanguageType.cs" />
@@ -73,15 +75,16 @@
     <Compile Include="Assets\Hotfix\Runtime\Core\Object\Singleton.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Data\Config\Enum\CommandVarietyType.cs" />
     <Compile Include="Assets\Hotfix\Logic\Camera\SmoothFoolow3D.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Init\Hotfix.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Data\Config\Enum\UI\LogType.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Init\Init.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Data\EventType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Data\Config\Enum\GameEventType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\ViewModel\ViewModelBase.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Data\UI\InfoBase.cs" />
     <Compile Include="Assets\Hotfix\Data\System\UserSetData.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Data\Config\Enum\UI\InfoState.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Data\Config\Enum\InfoState.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\GameDataManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Util\JsonUtil.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\UIEvent\UIEventHandlerAttribute.cs" />
     <Compile Include="Assets\Hotfix\Logic\Joystack\Joystack.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Util\Util.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Data\Config\Enum\PathType.cs" />
@@ -89,6 +92,7 @@
     <Compile Include="Assets\Hotfix\Runtime\Manager\Manager.cs" />
     <Compile Include="Assets\Hotfix\Data\System\UserData.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\View\IView.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\UIEvent\AUIEvent.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Data\Config\AssetType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\View\ViewBase.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Object\ObjectBase.cs" />
@@ -101,7 +105,9 @@
     <Compile Include="Assets\Hotfix\Logic\UI\Panel\Login\View\LoginPanel.cs" />
     <Compile Include="Assets\Hotfix\Logic\UI\Panel\Load\ViewModel\LoadModel.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Pool\Pool.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Data\Config\Enum\UI\PanelType.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Event\AEvent.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\UIEvent\IUIEvent.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Data\Config\Enum\PanelType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Data\Config\Enum\ResolutionType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Handler\ObjectBaseHandler.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\GameEventManager.cs" />
@@ -111,9 +117,11 @@
     <Compile Include="Assets\Hotfix\Runtime\Manager\GameTimeManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Data\TimerData.cs" />
     <Compile Include="Assets\Hotfix\Logic\UI\Panel\Login\ViewModel\LoginModel.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Object\LccViewFactory.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Factory\LccViewFactory.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Data\CommandData.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Event\EventBase.cs" />
+    <Compile Include="Assets\Hotfix\Logic\UI\Panel\Load\EventHandler\LoadEventHandler.cs" />
+    <Compile Include="Assets\Hotfix\Logic\UI\Panel\Login\EventHandler\LoginEventHandler.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Init\InitEventHandler.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Hotfix\Unity.Hotfix.asmdef" />
